my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ECYCLICTRAIT_template/T_ECYCLICTRAIT_template-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ECYCLICTRAIT_TEMPLATE_STRUCT_H
#define T_ECYCLICTRAIT_TEMPLATE_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ECYCLICTRAIT_template(void);


#endif /* not T_ECYCLICTRAIT_TEMPLATE_STRUCT_H */
